--- a/LabelTimer/LabelTimer/Info.plist
+++ b/LabelTimer/LabelTimer/Info.plist
@@ -2,12 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict>
-		<key>UIImageName</key>
-		<string>launch_icon</string>
 		<key>UIColorName</key>
 		<string>launch_background</string>
+		<key>UIImageName</key>
+		<string>launch_icon</string>
 		<key>UIImageRespectsSafeAreaInsets</key>
 		<true/>
 	</dict>
