--- a/QuickLabelTimer/QuickLabelTimer/Info.plist
+++ b/QuickLabelTimer/QuickLabelTimer/Info.plist
@@ -6,5 +6,14 @@
 	<array>
 		<string>audio</string>
 	</array>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>launch_background</string>
+		<key>UIImageName</key>
+		<string>launch_icon</string>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
