--- a/QuickLabelTimer/QuickLabelTimer/Info.plist
+++ b/QuickLabelTimer/QuickLabelTimer/Info.plist
@@ -3,9 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-	</array>
+	<array/>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
